[package]
name = "btw"
version = "0.2.0"
edition = "2021"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[cargo-features-manager.keep]
reqwest = ["rustls-tls"]

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
futures = { version = "0.3.31", default-features = false }
moka = { version = "0.12.8", features = ["future"], default-features = false }
reqwest = { version = "0.12.11", features = ["json", "rustls-tls"], default-features = false }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend"], default-features = false }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
url = { version = "2.5.4", default-features = false }
