[package]
name = "btw"
version = "0.2.0"
edition = "2021"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.11", features = ["json", "rustls-tls"] }
serenity = { version = "0.12.4", features = ["chrono", "client", "gateway", "model", "rustls_backend"], default-features = false }
tokio = { version = "1.42.0", features = ["macros", "parking_lot", "rt-multi-thread"] }
url = "2.5.4"
