[package]
name = "btw"
version = "0.3.0"
edition = "2021"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.95"
# Exclude "executor" from default features as we use Tokio as the async runtime
futures = { version = "0.3.31", features = ["async-await", "std"], default-features = false }
moka = { version = "0.12.10", features = ["future"] }
# Exclude "default-tls" from default features to avoid build errors on Linux where it tries to find OpenSSL
reqwest = { version = "0.12.12", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
serenity = { version = "0.12.4", features = ["chrono", "client", "gateway", "model", "rustls_backend"], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "parking_lot", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "parking_lot"] }
url = "2.5.4"
